# Parktikum-Fahrzeuginfomatik-

./: README.md
my_controller_package/: CMakeLists.txt  README.md  package.xml
my_controller_package/cfg/: MyControllerParameter.cfg
my_controller_package/launch/: mini_sim.launch  physics_sim.launch  sim_lane_detection.launch  sim_segmentation.launch
my_controller_package/launch/rviz/: config_basic.rviz  config_camera.rviz  (+1 more)
my_controller_package/src/: MyController.cpp  MyController.h  my_controller_node.cpp
my_detection_package/: CMakeLists.txt  README.md  package.xml
my_detection_package/cfg/: MyDetectorParameter.cfg
my_detection_package/launch/: sim_lane_detection.launch  sim_replay_video.launch
my_detection_package/src/: 1MyDetector.cpp  2MyDetector.cpp  MyDetector.cpp  MyDetector.h  Original_MyDetector.cpp  my_detector_node.cpp
my_obstacle_avoidance_package/: CMakeLists.txt  README.md  package.xml
my_obstacle_avoidance_package/launch/: mini_sim.launch  physics_sim.launch  sim_segmentation.launch
my_obstacle_avoidance_package/launch/rviz/: config_basic.rviz  config_segmentation.rviz
my_obstacle_avoidance_package/src/: my_waypoint_planning_node.py
my_obstacle_avoidance_package/src/planning_stage/: __init__.py  my_obstacle_avoidance.py
my_parking_package/: CMakeLists.txt  README.md  package.xml
my_parking_package/launch/: mini_sim.launch  physics_sim.launch  sim_segmentation.launch
my_parking_package/launch/rviz/: config_basic.rviz  config_segmentation.rviz
my_parking_package/src/: my_waypoint_planning_node.py
my_parking_package/src/planning_stage/: __init__.py  example_parking_behavior.py  my_parallel_parking_behavior (1).py  my_parallel_parking_behavior .py
(+2 files in other folders)
